--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@angularclass/hmr": "^1.2.1",
+    "@angularclass/hmr-loader": "^3.0.2",
     "@types/jasmine": "^2.2.30",
     "angular-cli": "1.0.0-beta.15",
     "codelyzer": "~0.0.26",
